src/parser.out
Grammar:

Rule 0     S' -> statements
Rule 1     statements -> _1_statement_repeat
Rule 2     _1_statement_repeat -> _1_statement_items
Rule 3     _1_statement_repeat -> <empty>
Rule 4     _1_statement_items -> _1_statement_items _1_statement_item
Rule 5     _1_statement_items -> _1_statement_item
Rule 6     _1_statement_item -> statement
Rule 7     statement -> expr SEMI
Rule 8     statement -> continue_statement
Rule 9     statement -> break_statement
Rule 10    statement -> while_statement
Rule 11    statement -> if_statement
Rule 12    statement -> const_definition
Rule 13    statement -> variable_definition
Rule 14    statement -> assignment_statement
Rule 15    statement -> print_statement
Rule 16    while_statement -> WHILE expr LBRACE statements RBRACE
Rule 17    continue_statement -> CONTINUE SEMI
Rule 18    break_statement -> BREAK SEMI
Rule 19    print_statement -> PRINT expr SEMI
Rule 20    assignment_statement -> location ASSIGN expr SEMI
Rule 21    variable_definition -> VAR NAME type _2_ASSIGN_expr_optional SEMI
Rule 22    _2_ASSIGN_expr_optional -> ASSIGN expr
Rule 23    _2_ASSIGN_expr_optional -> <empty>
Rule 24    variable_definition -> VAR NAME _3_type_optional ASSIGN expr SEMI
Rule 25    _3_type_optional -> type
Rule 26    _3_type_optional -> <empty>
Rule 27    const_definition -> CONST NAME _4_type_optional ASSIGN expr SEMI
Rule 28    _4_type_optional -> type
Rule 29    _4_type_optional -> <empty>
Rule 30    if_statement -> IF expr LBRACE statements RBRACE _5_ELSE_LBRACE_statements_RBRACE_optional
Rule 31    _5_ELSE_LBRACE_statements_RBRACE_optional -> ELSE LBRACE statements RBRACE
Rule 32    _5_ELSE_LBRACE_statements_RBRACE_optional -> <empty>
Rule 33    expr -> LBRACE statements RBRACE
Rule 34    expr -> literal
Rule 35    expr -> location
Rule 36    expr -> LPAREN expr RPAREN
Rule 37    expr -> LNOT expr  [precedence=right, level=6]
Rule 38    expr -> MINUS expr  [precedence=right, level=6]
Rule 39    expr -> PLUS expr  [precedence=right, level=6]
Rule 40    expr -> expr LOR expr  [precedence=left, level=1]
Rule 41    expr -> expr LAND expr  [precedence=left, level=2]
Rule 42    expr -> expr NE expr  [precedence=nonassoc, level=3]
Rule 43    expr -> expr EQ expr  [precedence=nonassoc, level=3]
Rule 44    expr -> expr GE expr  [precedence=nonassoc, level=3]
Rule 45    expr -> expr GT expr  [precedence=nonassoc, level=3]
Rule 46    expr -> expr LE expr  [precedence=nonassoc, level=3]
Rule 47    expr -> expr LT expr  [precedence=nonassoc, level=3]
Rule 48    expr -> expr DIVIDE expr  [precedence=left, level=5]
Rule 49    expr -> expr TIMES expr  [precedence=left, level=5]
Rule 50    expr -> expr MINUS expr  [precedence=left, level=4]
Rule 51    expr -> expr PLUS expr  [precedence=left, level=4]
Rule 52    location -> NAME
Rule 53    type -> NAME
Rule 54    literal -> FALSE
Rule 55    literal -> TRUE
Rule 56    literal -> LPAREN RPAREN
Rule 57    literal -> CHAR
Rule 58    literal -> FLOAT
Rule 59    literal -> INTEGER

Terminals, with rules where they appear:

ASSIGN               : 20 22 24 27
BREAK                : 18
CHAR                 : 57
CONST                : 27
CONTINUE             : 17
DIVIDE               : 48
ELSE                 : 31
EQ                   : 43
FALSE                : 54
FLOAT                : 58
GE                   : 44
GT                   : 45
IF                   : 30
INTEGER              : 59
LAND                 : 41
LBRACE               : 16 30 31 33
LE                   : 46
LNOT                 : 37
LOR                  : 40
LPAREN               : 36 56
LT                   : 47
MINUS                : 38 50
NAME                 : 21 24 27 52 53
NE                   : 42
PLUS                 : 39 51
PRINT                : 19
RBRACE               : 16 30 31 33
RPAREN               : 36 56
SEMI                 : 7 17 18 19 20 21 24 27
TIMES                : 49
TRUE                 : 55
VAR                  : 21 24
WHILE                : 16
error                : 

Nonterminals, with rules where they appear:

_1_statement_item    : 4 5
_1_statement_items   : 2 4
_1_statement_repeat  : 1
_2_ASSIGN_expr_optional : 21
_3_type_optional     : 24
_4_type_optional     : 27
_5_ELSE_LBRACE_statements_RBRACE_optional : 30
assignment_statement : 14
break_statement      : 9
const_definition     : 12
continue_statement   : 8
expr                 : 7 16 19 20 22 24 27 30 36 37 38 39 40 40 41 41 42 42 43 43 44 44 45 45 46 46 47 47 48 48 49 49 50 50 51 51
if_statement         : 11
literal              : 34
location             : 20 35
print_statement      : 15
statement            : 6
statements           : 16 30 31 33 0
type                 : 21 25 28
variable_definition  : 13
while_statement      : 10


state 0

    (0) S' -> . statements
    (1) statements -> . _1_statement_repeat
    (2) _1_statement_repeat -> . _1_statement_items
    (3) _1_statement_repeat -> .
    (4) _1_statement_items -> . _1_statement_items _1_statement_item
    (5) _1_statement_items -> . _1_statement_item
    (6) _1_statement_item -> . statement
    (7) statement -> . expr SEMI
    (8) statement -> . continue_statement
    (9) statement -> . break_statement
    (10) statement -> . while_statement
    (11) statement -> . if_statement
    (12) statement -> . const_definition
    (13) statement -> . variable_definition
    (14) statement -> . assignment_statement
    (15) statement -> . print_statement
    (33) expr -> . LBRACE statements RBRACE
    (34) expr -> . literal
    (35) expr -> . location
    (36) expr -> . LPAREN expr RPAREN
    (37) expr -> . LNOT expr
    (38) expr -> . MINUS expr
    (39) expr -> . PLUS expr
    (40) expr -> . expr LOR expr
    (41) expr -> . expr LAND expr
    (42) expr -> . expr NE expr
    (43) expr -> . expr EQ expr
    (44) expr -> . expr GE expr
    (45) expr -> . expr GT expr
    (46) expr -> . expr LE expr
    (47) expr -> . expr LT expr
    (48) expr -> . expr DIVIDE expr
    (49) expr -> . expr TIMES expr
    (50) expr -> . expr MINUS expr
    (51) expr -> . expr PLUS expr
    (17) continue_statement -> . CONTINUE SEMI
    (18) break_statement -> . BREAK SEMI
    (16) while_statement -> . WHILE expr LBRACE statements RBRACE
    (30) if_statement -> . IF expr LBRACE statements RBRACE _5_ELSE_LBRACE_statements_RBRACE_optional
    (27) const_definition -> . CONST NAME _4_type_optional ASSIGN expr SEMI
    (21) variable_definition -> . VAR NAME type _2_ASSIGN_expr_optional SEMI
    (24) variable_definition -> . VAR NAME _3_type_optional ASSIGN expr SEMI
    (20) assignment_statement -> . location ASSIGN expr SEMI
    (19) print_statement -> . PRINT expr SEMI
    (54) literal -> . FALSE
    (55) literal -> . TRUE
    (56) literal -> . LPAREN RPAREN
    (57) literal -> . CHAR
    (58) literal -> . FLOAT
    (59) literal -> . INTEGER
    (52) location -> . NAME
    $end            reduce using rule 3 (_1_statement_repeat -> .)
    LBRACE          shift and go to state 15
    LPAREN          shift and go to state 18
    LNOT            shift and go to state 19
    MINUS           shift and go to state 20
    PLUS            shift and go to state 21
    CONTINUE        shift and go to state 22
    BREAK           shift and go to state 23
    WHILE           shift and go to state 24
    IF              shift and go to state 25
    CONST           shift and go to state 26
    VAR             shift and go to state 28
    PRINT           shift and go to state 29
    FALSE           shift and go to state 30
    TRUE            shift and go to state 31
    CHAR            shift and go to state 32
    FLOAT           shift and go to state 33
    INTEGER         shift and go to state 34
    NAME            shift and go to state 27

    statements                     shift and go to state 1
    _1_statement_repeat            shift and go to state 2
    _1_statement_items             shift and go to state 3
    _1_statement_item              shift and go to state 4
    statement                      shift and go to state 5
    expr                           shift and go to state 6
    continue_statement             shift and go to state 7
    break_statement                shift and go to state 8
    while_statement                shift and go to state 9
    if_statement                   shift and go to state 10
    const_definition               shift and go to state 11
    variable_definition            shift and go to state 12
    assignment_statement           shift and go to state 13
    print_statement                shift and go to state 14
    literal                        shift and go to state 16
    location                       shift and go to state 17

state 1

    (0) S' -> statements .


state 2

    (1) statements -> _1_statement_repeat .
    $end            reduce using rule 1 (statements -> _1_statement_repeat .)
    RBRACE          reduce using rule 1 (statements -> _1_statement_repeat .)


state 3

    (2) _1_statement_repeat -> _1_statement_items .
    (4) _1_statement_items -> _1_statement_items . _1_statement_item
    (6) _1_statement_item -> . statement
    (7) statement -> . expr SEMI
    (8) statement -> . continue_statement
    (9) statement -> . break_statement
    (10) statement -> . while_statement
    (11) statement -> . if_statement
    (12) statement -> . const_definition
    (13) statement -> . variable_definition
    (14) statement -> . assignment_statement
    (15) statement -> . print_statement
    (33) expr -> . LBRACE statements RBRACE
    (34) expr -> . literal
    (35) expr -> . location
    (36) expr -> . LPAREN expr RPAREN
    (37) expr -> . LNOT expr
    (38) expr -> . MINUS expr
    (39) expr -> . PLUS expr
    (40) expr -> . expr LOR expr
    (41) expr -> . expr LAND expr
    (42) expr -> . expr NE expr
    (43) expr -> . expr EQ expr
    (44) expr -> . expr GE expr
    (45) expr -> . expr GT expr
    (46) expr -> . expr LE expr
    (47) expr -> . expr LT expr
    (48) expr -> . expr DIVIDE expr
    (49) expr -> . expr TIMES expr
    (50) expr -> . expr MINUS expr
    (51) expr -> . expr PLUS expr
    (17) continue_statement -> . CONTINUE SEMI
    (18) break_statement -> . BREAK SEMI
    (16) while_statement -> . WHILE expr LBRACE statements RBRACE
    (30) if_statement -> . IF expr LBRACE statements RBRACE _5_ELSE_LBRACE_statements_RBRACE_optional
    (27) const_definition -> . CONST NAME _4_type_optional ASSIGN expr SEMI
    (21) variable_definition -> . VAR NAME type _2_ASSIGN_expr_optional SEMI
    (24) variable_definition -> . VAR NAME _3_type_optional ASSIGN expr SEMI
    (20) assignment_statement -> . location ASSIGN expr SEMI
    (19) print_statement -> . PRINT expr SEMI
    (54) literal -> . FALSE
    (55) literal -> . TRUE
    (56) literal -> . LPAREN RPAREN
    (57) literal -> . CHAR
    (58) literal -> . FLOAT
    (59) literal -> . INTEGER
    (52) location -> . NAME
    $end            reduce using rule 2 (_1_statement_repeat -> _1_statement_items .)
    RBRACE          reduce using rule 2 (_1_statement_repeat -> _1_statement_items .)
    LBRACE          shift and go to state 15
    LPAREN          shift and go to state 18
    LNOT            shift and go to state 19
    MINUS           shift and go to state 20
    PLUS            shift and go to state 21
    CONTINUE        shift and go to state 22
    BREAK           shift and go to state 23
    WHILE           shift and go to state 24
    IF              shift and go to state 25
    CONST           shift and go to state 26
    VAR             shift and go to state 28
    PRINT           shift and go to state 29
    FALSE           shift and go to state 30
    TRUE            shift and go to state 31
    CHAR            shift and go to state 32
    FLOAT           shift and go to state 33
    INTEGER         shift and go to state 34
    NAME            shift and go to state 27

    _1_statement_item              shift and go to state 35
    statement                      shift and go to state 5
    expr                           shift and go to state 6
    continue_statement             shift and go to state 7
    break_statement                shift and go to state 8
    while_statement                shift and go to state 9
    if_statement                   shift and go to state 10
    const_definition               shift and go to state 11
    variable_definition            shift and go to state 12
    assignment_statement           shift and go to state 13
    print_statement                shift and go to state 14
    literal                        shift and go to state 16
    location                       shift and go to state 17

state 4

    (5) _1_statement_items -> _1_statement_item .
    LBRACE          reduce using rule 5 (_1_statement_items -> _1_statement_item .)
    LPAREN          reduce using rule 5 (_1_statement_items -> _1_statement_item .)
    LNOT            reduce using rule 5 (_1_statement_items -> _1_statement_item .)
    MINUS           reduce using rule 5 (_1_statement_items -> _1_statement_item .)
    PLUS            reduce using rule 5 (_1_statement_items -> _1_statement_item .)
    CONTINUE        reduce using rule 5 (_1_statement_items -> _1_statement_item .)
    BREAK           reduce using rule 5 (_1_statement_items -> _1_statement_item .)
    WHILE           reduce using rule 5 (_1_statement_items -> _1_statement_item .)
    IF              reduce using rule 5 (_1_statement_items -> _1_statement_item .)
    CONST           reduce using rule 5 (_1_statement_items -> _1_statement_item .)
    VAR             reduce using rule 5 (_1_statement_items -> _1_statement_item .)
    PRINT           reduce using rule 5 (_1_statement_items -> _1_statement_item .)
    FALSE           reduce using rule 5 (_1_statement_items -> _1_statement_item .)
    TRUE            reduce using rule 5 (_1_statement_items -> _1_statement_item .)
    CHAR            reduce using rule 5 (_1_statement_items -> _1_statement_item .)
    FLOAT           reduce using rule 5 (_1_statement_items -> _1_statement_item .)
    INTEGER         reduce using rule 5 (_1_statement_items -> _1_statement_item .)
    NAME            reduce using rule 5 (_1_statement_items -> _1_statement_item .)
    $end            reduce using rule 5 (_1_statement_items -> _1_statement_item .)
    RBRACE          reduce using rule 5 (_1_statement_items -> _1_statement_item .)


state 5

    (6) _1_statement_item -> statement .
    LBRACE          reduce using rule 6 (_1_statement_item -> statement .)
    LPAREN          reduce using rule 6 (_1_statement_item -> statement .)
    LNOT            reduce using rule 6 (_1_statement_item -> statement .)
    MINUS           reduce using rule 6 (_1_statement_item -> statement .)
    PLUS            reduce using rule 6 (_1_statement_item -> statement .)
    CONTINUE        reduce using rule 6 (_1_statement_item -> statement .)
    BREAK           reduce using rule 6 (_1_statement_item -> statement .)
    WHILE           reduce using rule 6 (_1_statement_item -> statement .)
    IF              reduce using rule 6 (_1_statement_item -> statement .)
    CONST           reduce using rule 6 (_1_statement_item -> statement .)
    VAR             reduce using rule 6 (_1_statement_item -> statement .)
    PRINT           reduce using rule 6 (_1_statement_item -> statement .)
    FALSE           reduce using rule 6 (_1_statement_item -> statement .)
    TRUE            reduce using rule 6 (_1_statement_item -> statement .)
    CHAR            reduce using rule 6 (_1_statement_item -> statement .)
    FLOAT           reduce using rule 6 (_1_statement_item -> statement .)
    INTEGER         reduce using rule 6 (_1_statement_item -> statement .)
    NAME            reduce using rule 6 (_1_statement_item -> statement .)
    $end            reduce using rule 6 (_1_statement_item -> statement .)
    RBRACE          reduce using rule 6 (_1_statement_item -> statement .)


state 6

    (7) statement -> expr . SEMI
    (40) expr -> expr . LOR expr
    (41) expr -> expr . LAND expr
    (42) expr -> expr . NE expr
    (43) expr -> expr . EQ expr
    (44) expr -> expr . GE expr
    (45) expr -> expr . GT expr
    (46) expr -> expr . LE expr
    (47) expr -> expr . LT expr
    (48) expr -> expr . DIVIDE expr
    (49) expr -> expr . TIMES expr
    (50) expr -> expr . MINUS expr
    (51) expr -> expr . PLUS expr
    SEMI            shift and go to state 36
    LOR             shift and go to state 37
    LAND            shift and go to state 38
    NE              shift and go to state 39
    EQ              shift and go to state 40
    GE              shift and go to state 41
    GT              shift and go to state 42
    LE              shift and go to state 43
    LT              shift and go to state 44
    DIVIDE          shift and go to state 45
    TIMES           shift and go to state 46
    MINUS           shift and go to state 47
    PLUS            shift and go to state 48


state 7

    (8) statement -> continue_statement .
    LBRACE          reduce using rule 8 (statement -> continue_statement .)
    LPAREN          reduce using rule 8 (statement -> continue_statement .)
    LNOT            reduce using rule 8 (statement -> continue_statement .)
    MINUS           reduce using rule 8 (statement -> continue_statement .)
    PLUS            reduce using rule 8 (statement -> continue_statement .)
    CONTINUE        reduce using rule 8 (statement -> continue_statement .)
    BREAK           reduce using rule 8 (statement -> continue_statement .)
    WHILE           reduce using rule 8 (statement -> continue_statement .)
    IF              reduce using rule 8 (statement -> continue_statement .)
    CONST           reduce using rule 8 (statement -> continue_statement .)
    VAR             reduce using rule 8 (statement -> continue_statement .)
    PRINT           reduce using rule 8 (statement -> continue_statement .)
    FALSE           reduce using rule 8 (statement -> continue_statement .)
    TRUE            reduce using rule 8 (statement -> continue_statement .)
    CHAR            reduce using rule 8 (statement -> continue_statement .)
    FLOAT           reduce using rule 8 (statement -> continue_statement .)
    INTEGER         reduce using rule 8 (statement -> continue_statement .)
    NAME            reduce using rule 8 (statement -> continue_statement .)
    $end            reduce using rule 8 (statement -> continue_statement .)
    RBRACE          reduce using rule 8 (statement -> continue_statement .)


state 8

    (9) statement -> break_statement .
    LBRACE          reduce using rule 9 (statement -> break_statement .)
    LPAREN          reduce using rule 9 (statement -> break_statement .)
    LNOT            reduce using rule 9 (statement -> break_statement .)
    MINUS           reduce using rule 9 (statement -> break_statement .)
    PLUS            reduce using rule 9 (statement -> break_statement .)
    CONTINUE        reduce using rule 9 (statement -> break_statement .)
    BREAK           reduce using rule 9 (statement -> break_statement .)
    WHILE           reduce using rule 9 (statement -> break_statement .)
    IF              reduce using rule 9 (statement -> break_statement .)
    CONST           reduce using rule 9 (statement -> break_statement .)
    VAR             reduce using rule 9 (statement -> break_statement .)
    PRINT           reduce using rule 9 (statement -> break_statement .)
    FALSE           reduce using rule 9 (statement -> break_statement .)
    TRUE            reduce using rule 9 (statement -> break_statement .)
    CHAR            reduce using rule 9 (statement -> break_statement .)
    FLOAT           reduce using rule 9 (statement -> break_statement .)
    INTEGER         reduce using rule 9 (statement -> break_statement .)
    NAME            reduce using rule 9 (statement -> break_statement .)
    $end            reduce using rule 9 (statement -> break_statement .)
    RBRACE          reduce using rule 9 (statement -> break_statement .)


state 9

    (10) statement -> while_statement .
    LBRACE          reduce using rule 10 (statement -> while_statement .)
    LPAREN          reduce using rule 10 (statement -> while_statement .)
    LNOT            reduce using rule 10 (statement -> while_statement .)
    MINUS           reduce using rule 10 (statement -> while_statement .)
    PLUS            reduce using rule 10 (statement -> while_statement .)
    CONTINUE        reduce using rule 10 (statement -> while_statement .)
    BREAK           reduce using rule 10 (statement -> while_statement .)
    WHILE           reduce using rule 10 (statement -> while_statement .)
    IF              reduce using rule 10 (statement -> while_statement .)
    CONST           reduce using rule 10 (statement -> while_statement .)
    VAR             reduce using rule 10 (statement -> while_statement .)
    PRINT           reduce using rule 10 (statement -> while_statement .)
    FALSE           reduce using rule 10 (statement -> while_statement .)
    TRUE            reduce using rule 10 (statement -> while_statement .)
    CHAR            reduce using rule 10 (statement -> while_statement .)
    FLOAT           reduce using rule 10 (statement -> while_statement .)
    INTEGER         reduce using rule 10 (statement -> while_statement .)
    NAME            reduce using rule 10 (statement -> while_statement .)
    $end            reduce using rule 10 (statement -> while_statement .)
    RBRACE          reduce using rule 10 (statement -> while_statement .)


state 10

    (11) statement -> if_statement .
    LBRACE          reduce using rule 11 (statement -> if_statement .)
    LPAREN          reduce using rule 11 (statement -> if_statement .)
    LNOT            reduce using rule 11 (statement -> if_statement .)
    MINUS           reduce using rule 11 (statement -> if_statement .)
    PLUS            reduce using rule 11 (statement -> if_statement .)
    CONTINUE        reduce using rule 11 (statement -> if_statement .)
    BREAK           reduce using rule 11 (statement -> if_statement .)
    WHILE           reduce using rule 11 (statement -> if_statement .)
    IF              reduce using rule 11 (statement -> if_statement .)
    CONST           reduce using rule 11 (statement -> if_statement .)
    VAR             reduce using rule 11 (statement -> if_statement .)
    PRINT           reduce using rule 11 (statement -> if_statement .)
    FALSE           reduce using rule 11 (statement -> if_statement .)
    TRUE            reduce using rule 11 (statement -> if_statement .)
    CHAR            reduce using rule 11 (statement -> if_statement .)
    FLOAT           reduce using rule 11 (statement -> if_statement .)
    INTEGER         reduce using rule 11 (statement -> if_statement .)
    NAME            reduce using rule 11 (statement -> if_statement .)
    $end            reduce using rule 11 (statement -> if_statement .)
    RBRACE          reduce using rule 11 (statement -> if_statement .)


state 11

    (12) statement -> const_definition .
    LBRACE          reduce using rule 12 (statement -> const_definition .)
    LPAREN          reduce using rule 12 (statement -> const_definition .)
    LNOT            reduce using rule 12 (statement -> const_definition .)
    MINUS           reduce using rule 12 (statement -> const_definition .)
    PLUS            reduce using rule 12 (statement -> const_definition .)
    CONTINUE        reduce using rule 12 (statement -> const_definition .)
    BREAK           reduce using rule 12 (statement -> const_definition .)
    WHILE           reduce using rule 12 (statement -> const_definition .)
    IF              reduce using rule 12 (statement -> const_definition .)
    CONST           reduce using rule 12 (statement -> const_definition .)
    VAR             reduce using rule 12 (statement -> const_definition .)
    PRINT           reduce using rule 12 (statement -> const_definition .)
    FALSE           reduce using rule 12 (statement -> const_definition .)
    TRUE            reduce using rule 12 (statement -> const_definition .)
    CHAR            reduce using rule 12 (statement -> const_definition .)
    FLOAT           reduce using rule 12 (statement -> const_definition .)
    INTEGER         reduce using rule 12 (statement -> const_definition .)
    NAME            reduce using rule 12 (statement -> const_definition .)
    $end            reduce using rule 12 (statement -> const_definition .)
    RBRACE          reduce using rule 12 (statement -> const_definition .)


state 12

    (13) statement -> variable_definition .
    LBRACE          reduce using rule 13 (statement -> variable_definition .)
    LPAREN          reduce using rule 13 (statement -> variable_definition .)
    LNOT            reduce using rule 13 (statement -> variable_definition .)
    MINUS           reduce using rule 13 (statement -> variable_definition .)
    PLUS            reduce using rule 13 (statement -> variable_definition .)
    CONTINUE        reduce using rule 13 (statement -> variable_definition .)
    BREAK           reduce using rule 13 (statement -> variable_definition .)
    WHILE           reduce using rule 13 (statement -> variable_definition .)
    IF              reduce using rule 13 (statement -> variable_definition .)
    CONST           reduce using rule 13 (statement -> variable_definition .)
    VAR             reduce using rule 13 (statement -> variable_definition .)
    PRINT           reduce using rule 13 (statement -> variable_definition .)
    FALSE           reduce using rule 13 (statement -> variable_definition .)
    TRUE            reduce using rule 13 (statement -> variable_definition .)
    CHAR            reduce using rule 13 (statement -> variable_definition .)
    FLOAT           reduce using rule 13 (statement -> variable_definition .)
    INTEGER         reduce using rule 13 (statement -> variable_definition .)
    NAME            reduce using rule 13 (statement -> variable_definition .)
    $end            reduce using rule 13 (statement -> variable_definition .)
    RBRACE          reduce using rule 13 (statement -> variable_definition .)


state 13

    (14) statement -> assignment_statement .
    LBRACE          reduce using rule 14 (statement -> assignment_statement .)
    LPAREN          reduce using rule 14 (statement -> assignment_statement .)
    LNOT            reduce using rule 14 (statement -> assignment_statement .)
    MINUS           reduce using rule 14 (statement -> assignment_statement .)
    PLUS            reduce using rule 14 (statement -> assignment_statement .)
    CONTINUE        reduce using rule 14 (statement -> assignment_statement .)
    BREAK           reduce using rule 14 (statement -> assignment_statement .)
    WHILE           reduce using rule 14 (statement -> assignment_statement .)
    IF              reduce using rule 14 (statement -> assignment_statement .)
    CONST           reduce using rule 14 (statement -> assignment_statement .)
    VAR             reduce using rule 14 (statement -> assignment_statement .)
    PRINT           reduce using rule 14 (statement -> assignment_statement .)
    FALSE           reduce using rule 14 (statement -> assignment_statement .)
    TRUE            reduce using rule 14 (statement -> assignment_statement .)
    CHAR            reduce using rule 14 (statement -> assignment_statement .)
    FLOAT           reduce using rule 14 (statement -> assignment_statement .)
    INTEGER         reduce using rule 14 (statement -> assignment_statement .)
    NAME            reduce using rule 14 (statement -> assignment_statement .)
    $end            reduce using rule 14 (statement -> assignment_statement .)
    RBRACE          reduce using rule 14 (statement -> assignment_statement .)


state 14

    (15) statement -> print_statement .
    LBRACE          reduce using rule 15 (statement -> print_statement .)
    LPAREN          reduce using rule 15 (statement -> print_statement .)
    LNOT            reduce using rule 15 (statement -> print_statement .)
    MINUS           reduce using rule 15 (statement -> print_statement .)
    PLUS            reduce using rule 15 (statement -> print_statement .)
    CONTINUE        reduce using rule 15 (statement -> print_statement .)
    BREAK           reduce using rule 15 (statement -> print_statement .)
    WHILE           reduce using rule 15 (statement -> print_statement .)
    IF              reduce using rule 15 (statement -> print_statement .)
    CONST           reduce using rule 15 (statement -> print_statement .)
    VAR             reduce using rule 15 (statement -> print_statement .)
    PRINT           reduce using rule 15 (statement -> print_statement .)
    FALSE           reduce using rule 15 (statement -> print_statement .)
    TRUE            reduce using rule 15 (statement -> print_statement .)
    CHAR            reduce using rule 15 (statement -> print_statement .)
    FLOAT           reduce using rule 15 (statement -> print_statement .)
    INTEGER         reduce using rule 15 (statement -> print_statement .)
    NAME            reduce using rule 15 (statement -> print_statement .)
    $end            reduce using rule 15 (statement -> print_statement .)
    RBRACE          reduce using rule 15 (statement -> print_statement .)


state 15

    (33) expr -> LBRACE . statements RBRACE
    (1) statements -> . _1_statement_repeat
    (2) _1_statement_repeat -> . _1_statement_items
    (3) _1_statement_repeat -> .
    (4) _1_statement_items -> . _1_statement_items _1_statement_item
    (5) _1_statement_items -> . _1_statement_item
    (6) _1_statement_item -> . statement
    (7) statement -> . expr SEMI
    (8) statement -> . continue_statement
    (9) statement -> . break_statement
    (10) statement -> . while_statement
    (11) statement -> . if_statement
    (12) statement -> . const_definition
    (13) statement -> . variable_definition
    (14) statement -> . assignment_statement
    (15) statement -> . print_statement
    (33) expr -> . LBRACE statements RBRACE
    (34) expr -> . literal
    (35) expr -> . location
    (36) expr -> . LPAREN expr RPAREN
    (37) expr -> . LNOT expr
    (38) expr -> . MINUS expr
    (39) expr -> . PLUS expr
    (40) expr -> . expr LOR expr
    (41) expr -> . expr LAND expr
    (42) expr -> . expr NE expr
    (43) expr -> . expr EQ expr
    (44) expr -> . expr GE expr
    (45) expr -> . expr GT expr
    (46) expr -> . expr LE expr
    (47) expr -> . expr LT expr
    (48) expr -> . expr DIVIDE expr
    (49) expr -> . expr TIMES expr
    (50) expr -> . expr MINUS expr
    (51) expr -> . expr PLUS expr
    (17) continue_statement -> . CONTINUE SEMI
    (18) break_statement -> . BREAK SEMI
    (16) while_statement -> . WHILE expr LBRACE statements RBRACE
    (30) if_statement -> . IF expr LBRACE statements RBRACE _5_ELSE_LBRACE_statements_RBRACE_optional
    (27) const_definition -> . CONST NAME _4_type_optional ASSIGN expr SEMI
    (21) variable_definition -> . VAR NAME type _2_ASSIGN_expr_optional SEMI
    (24) variable_definition -> . VAR NAME _3_type_optional ASSIGN expr SEMI
    (20) assignment_statement -> . location ASSIGN expr SEMI
    (19) print_statement -> . PRINT expr SEMI
    (54) literal -> . FALSE
    (55) literal -> . TRUE
    (56) literal -> . LPAREN RPAREN
    (57) literal -> . CHAR
    (58) literal -> . FLOAT
    (59) literal -> . INTEGER
    (52) location -> . NAME
    RBRACE          reduce using rule 3 (_1_statement_repeat -> .)
    LBRACE          shift and go to state 15
    LPAREN          shift and go to state 18
    LNOT            shift and go to state 19
    MINUS           shift and go to state 20
    PLUS            shift and go to state 21
    CONTINUE        shift and go to state 22
    BREAK           shift and go to state 23
    WHILE           shift and go to state 24
    IF              shift and go to state 25
    CONST           shift and go to state 26
    VAR             shift and go to state 28
    PRINT           shift and go to state 29
    FALSE           shift and go to state 30
    TRUE            shift and go to state 31
    CHAR            shift and go to state 32
    FLOAT           shift and go to state 33
    INTEGER         shift and go to state 34
    NAME            shift and go to state 27

    statements                     shift and go to state 49
    _1_statement_repeat            shift and go to state 2
    _1_statement_items             shift and go to state 3
    _1_statement_item              shift and go to state 4
    statement                      shift and go to state 5
    expr                           shift and go to state 6
    continue_statement             shift and go to state 7
    break_statement                shift and go to state 8
    while_statement                shift and go to state 9
    if_statement                   shift and go to state 10
    const_definition               shift and go to state 11
    variable_definition            shift and go to state 12
    assignment_statement           shift and go to state 13
    print_statement                shift and go to state 14
    literal                        shift and go to state 16
    location                       shift and go to state 17

state 16

    (34) expr -> literal .
    SEMI            reduce using rule 34 (expr -> literal .)
    LOR             reduce using rule 34 (expr -> literal .)
    LAND            reduce using rule 34 (expr -> literal .)
    NE              reduce using rule 34 (expr -> literal .)
    EQ              reduce using rule 34 (expr -> literal .)
    GE              reduce using rule 34 (expr -> literal .)
    GT              reduce using rule 34 (expr -> literal .)
    LE              reduce using rule 34 (expr -> literal .)
    LT              reduce using rule 34 (expr -> literal .)
    DIVIDE          reduce using rule 34 (expr -> literal .)
    TIMES           reduce using rule 34 (expr -> literal .)
    MINUS           reduce using rule 34 (expr -> literal .)
    PLUS            reduce using rule 34 (expr -> literal .)
    RPAREN          reduce using rule 34 (expr -> literal .)
    LBRACE          reduce using rule 34 (expr -> literal .)


state 17

    (35) expr -> location .
    (20) assignment_statement -> location . ASSIGN expr SEMI
    SEMI            reduce using rule 35 (expr -> location .)
    LOR             reduce using rule 35 (expr -> location .)
    LAND            reduce using rule 35 (expr -> location .)
    NE              reduce using rule 35 (expr -> location .)
    EQ              reduce using rule 35 (expr -> location .)
    GE              reduce using rule 35 (expr -> location .)
    GT              reduce using rule 35 (expr -> location .)
    LE              reduce using rule 35 (expr -> location .)
    LT              reduce using rule 35 (expr -> location .)
    DIVIDE          reduce using rule 35 (expr -> location .)
    TIMES           reduce using rule 35 (expr -> location .)
    MINUS           reduce using rule 35 (expr -> location .)
    PLUS            reduce using rule 35 (expr -> location .)
    ASSIGN          shift and go to state 50


state 18
